Deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "zerossl-acme-issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: sample.baladevopsforyou.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
  tls:
  - hosts:
    - sample.baladevopsforyou.cloud
    secretName: mytry-ssl-cert-tls
